force-app/main/default/objects/Plan_Mensual_de_ventas__c/Plan_Mensual_de_ventas__c.object-meta.xml
<CustomObject>
    <description>Objeto que va a almacenar el plan y las metas de venta por vendedor,</description>
    <label>Plan Mensual de venta</label>
    <nameField>
        <label>Plan Mensual de ventas Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Mensual de ventas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>