force-app/main/default/objects/Plan_Mensual_de_ventas__c/fields/Ano_Calendario__c.field-meta.xml
<CustomField>
    <fullName>Ano_Calendario__c</fullName>
    <description>Coniene los años</description>
    <label>Año</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>