force-app/main/default/objects/Plan_Mensual_de_ventas__c/fields/Cumplimiento__c.field-meta.xml
<CustomField>
    <fullName>Cumplimiento__c</fullName>
    <description>Almacena el cumplimiento de venta</description>
    <formula>Unidades_Vendidas__c / Meta_de_Venta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumplimiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>