force-app/main/default/objects/Plan_Mensual_de_ventas__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Marca que vende</description>
    <label>Marca</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Marcas</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Plan Mensual de ventas</relationshipLabel>
    <relationshipName>Plan_Mensual_de_ventas</relationshipName>
    <type>Lookup</type>
</CustomField>