force-app/main/default/objects/Plan_Mensual_de_ventas__c/fields/Marca_texto__c.field-meta.xml
<CustomField>
    <fullName>Marca_texto__c</fullName>
    <formula>Marca__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marca texto</label>
    <type>Text</type>
</CustomField>