force-app/main/default/objects/Plan_Mensual_de_ventas__c/fields/Mes_numerico__c.field-meta.xml
<CustomField>
    <fullName>Mes_numerico__c</fullName>
    <formula>CASE( Mes_Calendario__c , 
  &quot;ENERO&quot;, 1, 
  &quot;FEBRERO&quot;, 2,
  &quot;MARZO&quot;, 3, 
  &quot;ABRIL&quot;, 4,
  &quot;MAYO&quot;, 5,
  &quot;JUNIO&quot;, 6, 
  &quot;JULIO&quot;, 7,
  &quot;AGOSTO&quot;, 8,
  &quot;SEPTIEMBRE&quot;, 9,
  &quot;OCTUBRE&quot;, 10,
  &quot;NOVIEMBRE&quot;, 11,
  &quot;DICIEMBRE&quot;, 12,
 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mes numérico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>