force-app/main/default/objects/Plan_Mensual_de_ventas__c/fields/Meta__c.field-meta.xml
<CustomField>
    <fullName>Meta__c</fullName>
    <label>Meta de Oportunidades</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>