force-app/main/default/objects/Plan_Mensual_de_ventas__c/fields/Meta_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Meta_de_Venta__c</fullName>
    <description>Almacena la meta de venta para cada vendedor</description>
    <label>Meta de Venta (Uds)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>