force-app/main/default/objects/Plan_Mensual_de_ventas__c/fields/Meta_en_Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Meta_en_Sucursal__c</fullName>
    <description>Almacena meta de venta del vendedor, campo solo disponible para los jefes de sucursal</description>
    <label>Meta en Sucursal</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>