force-app/main/default/objects/Plan_Mensual_de_ventas__c/fields/Monto_Facturado__c.field-meta.xml
<CustomField>
    <fullName>Monto_Facturado__c</fullName>
    <description>Campo que alamcenará el monto facturado del mes por vendedor</description>
    <label>Monto Facturado</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>