force-app/main/default/objects/Plan_Mensual_de_ventas__c/fields/Oportunidades_Creadas__c.field-meta.xml
<CustomField>
    <fullName>Oportunidades_Creadas__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Oportunidades Creadas</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>