force-app/main/default/objects/Plan_Mensual_de_ventas__c/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sucursal del vendedor</description>
    <label>Sucursal</label>
    <referenceTo>Catalogo_Sucursales__c</referenceTo>
    <relationshipLabel>Plan Mensual de ventas</relationshipLabel>
    <relationshipName>Plan_Mensual_de_ventas</relationshipName>
    <type>Lookup</type>
</CustomField>