force-app/main/default/objects/Plan_Mensual_de_ventas__c/fields/Unidades_Vendidas__c.field-meta.xml
<CustomField>
    <fullName>Unidades_Vendidas__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Campo que almacenará las unidades vendidas del mes</description>
    <label>Unidades Vendidas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>