force-app/main/default/objects/Plan_Mensual_de_ventas__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>llama al nombre del usuario</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Plan_Mensual_de_ventas</relationshipName>
    <type>Lookup</type>
</CustomField>