force-app/main/default/objects/Plan_Mensual_de_ventas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Meta__c</columns>
    <columns>Oportunidades_Creadas__c</columns>
    <columns>Meta_de_Venta__c</columns>
    <columns>Unidades_Vendidas__c</columns>
    <columns>Marca__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>